--- a/src/Raven.Studio/wwwroot/App/views/shell.html
+++ b/src/Raven.Studio/wwwroot/App/views/shell.html
@@ -1,4 +1,9 @@
-<div class="layout-container" data-bind="css: { 'cloud-cluster-admin': applyColorCustomization, 'collapse-menu': collapseMenu() || smallScreen(), 'pin-notifications': notificationCenter.pinNotifications(), 'show-notifications': notificationCenter.showNotifications(), 'show-search': searchBox.showSearchSmallScreen() }">
+<!--<div class="layout-container" data-bind="css: { 'cloud-cluster-admin': applyColorCustomization, 'collapse-menu': collapseMenu() || smallScreen(), 'pin-notifications': notificationCenter.pinNotifications(), 'show-notifications': notificationCenter.showNotifications(), 'show-search': searchBox.showSearchSmallScreen() }">-->
+<div class="layout-container" 
+     data-bind="css: { 'cloud-cluster-admin': applyColorCustomization, 'collapse-menu': collapseMenu() || smallScreen(),
+                       'pin-notifications': notificationCenter.pinNotifications(), 'show-notifications': notificationCenter.showNotifications(),
+                       'pin-toggle-pinned': notificationCenter.pinNotifications() && notificationCenter.showNotifications(), 'show-search': searchBox.showSearchSmallScreen() }">
+    
     <div data-bind="compose: browserAlert"></div>
     <aside class="top-alert" data-bind="visible: developerLicense">
         Developer License - Not for Production Use
